Repositorio Laboratorio 1 - Libros

--- a/Lab1Clase.html
+++ b/Lab1Clase.html
@@ -14,7 +14,8 @@
                 
                 <p>Busca y compra el libro que estas deseando de una manera facil y segura.
                 Libros para adolescentes, ninos, entretenimientos, libros electronicos,
-                sagas.</p>
+                sagas.
+                <h3>Hola, soy Chayito :3</h3></p>
                 
             <hr>
                 <p>Copyright 2014 Alberto DCS</p>
