--- a/Lab1Mostrar.html
+++ b/Lab1Mostrar.html
@@ -12,7 +12,7 @@
         <h1>BetoBook's Libros libros!!!! Llevelos!!!!!</h1>
         <hr>
         <img src="libros.jpg" height="260" width = "1300" alt="La imagen murio">
-           <nav><a>a href = "Lab1Clase.html">Inicio</a><a href ="Lab1mostrar.html">Mostrar</a> <a href ="Lab1Agregar.html">Agregar</a></nav>
+           <nav><a href = "Lab1Clase.html">Inicio</a><a href ="Lab1mostrar.html">Mostrar</a> <a href ="Lab1Agregar.html">Agregar</a></nav>
 
     </header>
     
