--- a/Lab1Mostrar.html
+++ b/Lab1Mostrar.html
@@ -3,7 +3,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Nuestro catalogo
+    <title>Nuestro catalogo HOLIWI CHAYO!!
     </title>
 </head>
 
